# BAG

./: README.md  config.cpp  config.h  main.cpp  writing.cpp  writing.h
test/: CMakeLists.txt  compr.bag  options  test.cpp
